--- a/templates/index.html
+++ b/templates/index.html
@@ -53,8 +53,9 @@
       margin-right: auto; /* Deixa o botão à esquerda */
     }
     .hamburger svg {
-      width: 24px;
-      height: 24px;
+      /* AUMENTE AQUI O TAMANHO DO ÍCONE */
+      width: 32px;
+      height: 32px;
       fill: #fff;
     }
 
