--- a/templates/login.html
+++ b/templates/login.html
@@ -204,10 +204,10 @@
       <div class="erro">{{ erro }}</div>
     {% endif %}
     <form action="{{ url_for('login') }}" method="POST">
-      <label for="nome">Nome de Usuário</label>
+      <label for="nome">Nome completo:</label>
       <input type="text" id="nome" name="nome" required autocomplete="off" />
 
-      <label for="senha">Senha</label>
+      <label for="senha">Senha:</label>
       <input type="password" id="senha" name="senha" required />
 
       <input type="submit" value="Entrar" />
